# eps-desafio-1

./: pyproject.toml
.github/workflows/: ci.yml
src/primeiro_desafio_eps/: main.py
